# plain-starter-bare

./: .devcontainer.json  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
app/: settings.py  urls.py
app/templates/: 404.html  base.html  example.html
scripts/: install
