[tool.poetry]
name = "app"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
plainframework = {git = "https://github.com/dropseed/plain", branch = "main", subdirectory = "plain"}

[tool.poetry.group.dev.dependencies]
plain-dev = {git = "https://github.com/dropseed/plain", branch = "main", subdirectory = "plain-dev"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
