[tool.poetry]
name = "app"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
plainframework = "<1.0.0"

[tool.poetry.group.dev.dependencies]
"plain.dev" = "<1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
